--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	<h1>开始git的命令行学习</h1>
-	<span>1.第一次推送到远程仓库，出现github error: failed to push some refs to 错误的解决方案：<br/><a href="http://jingyan.baidu.com/article/f3e34a12a25bc8f5ea65354a.html" target="_blank" class="m">出现错误的主要原因是github中的README.md文件不在本地代码目录中，可以通过这个代码解决：git pull --rebase origin master</a></span>
+	<span>1.第一次推送到远程仓库，出现github error: failed to push some refs to 错误
+		的解决方案：<br/><a href="http://jingyan.baidu.com/article/f3e34a12a25bc8f5e
+		a65354a.html" target="_blank" class="m">出现错误的主要原因是github中的README.
+		md文件不在本地代码目录中，可以通过这个代码解决：git pull --rebase origin master
+	</a></span>
 </body>
 </html>
